Enhance project setup with new dependencies, TypeScript configurations, and a note-taking feature. Added support for Svelte Query, improved form handling, and updated styles. Removed unused SearchBar component.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,13 +1,17 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "$lib": ["./src/lib"],
+      "$lib/*": ["./src/lib/*"],
+
+      "@/*": ["./*"]
     },
     /**
      * Typecheck JS in `.svelte` and `.js` files by default.
