--- a/package.json
+++ b/package.json
@@ -10,15 +10,36 @@
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
+    "@internationalized/date": "^3.8.2",
+    "@lucide/svelte": "^0.515.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "bits-ui": "^2.8.0",
+    "clsx": "^2.1.1",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "formsnap": "^2.0.1",
+    "mode-watcher": "^1.0.8",
+    "prettier": "^3.5.3",
     "svelte": "^5.28.1",
     "svelte-check": "^4.1.6",
+    "svelte-preprocess": "^6.0.3",
+    "svelte-sonner": "^1.0.5",
+    "sveltekit-superforms": "^2.26.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^1.0.0",
+    "tw-animate-css": "^1.3.4",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
-    "tailwindcss": "^4.1.10"
+    "@tanstack/svelte-query": "^5.80.7",
+    "tailwindcss": "^4.1.10",
+    "zod": "^3.25.64"
   }
 }
